--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-.containerTwo {
+/* .containerTwo {
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 300px;
     background-color: #f5f5f5;
-}
+} */
